--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -13979,7 +13979,16 @@ class Trie {
 
 ```
 
-728. 自除数
+---
+
+
+
+
+
+---
+
+## 728. 自除数
+
 自除数 是指可以被它包含的每一位数整除的数。
 
 例如，128 是一个 自除数 ，因为 128 % 1 == 0，128 % 2 == 0，128 % 8 == 0。
@@ -14024,6 +14033,49 @@ console.log(result);
 
 
 ---
+## 732. 我的日程安排表 III
+
+当 k 个日程安排有一些时间上的交叉时（例如 k 个日程安排都在同一时间内），就会产生 k 次预订。
+
+给你一些日程安排 [start, end) ，请你在每个日程安排添加后，返回一个整数 k ，表示所有先前日程安排会产生的最大 k 次预订。
+
+实现一个 MyCalendarThree 类来存放你的日程安排，你可以一直添加新的日程安排。
+
+MyCalendarThree() 初始化对象。
+int book(int start, int end) 返回一个整数 k ，表示日历中存在的 k 次预订的最大值。
+
+```
+var MyCalendarThree = function() {
+    this.tree = new Map();
+    this.lazy = new Map();
+};
+
+MyCalendarThree.prototype.book = function(start, end) {
+    this.update(start, end - 1, 0, 1000000000, 1);
+    return this.tree.get(1) || 0;
+};
+
+MyCalendarThree.prototype.update = function(start, end, l, r, idx) {
+    if (r < start || end < l) {
+        return;
+    } 
+    if (start <= l && r <= end) {
+        this.tree.set(idx, (this.tree.get(idx) || 0) + 1);
+        this.lazy.set(idx, (this.lazy.get(idx) || 0) + 1);
+    } else {
+        const mid = (l + r) >> 1;
+        this.update(start, end, l, mid, 2 * idx);
+        this.update(start, end, mid + 1, r, 2 * idx + 1);
+        this.tree.set(idx, (this.lazy.get(idx) || 0) + Math.max((this.tree.get(2 * idx) || 0), (this.tree.get(2 * idx + 1) || 0)));
+    }
+}
+
+```
+
+
+
+---
+
 ## 744. 寻找比目标字母大的最小字母
 
 给你一个排序后的字符列表 letters ，列表中只包含小写英文字母。另给出一个目标字母 target，请你寻找在这一有序列表里比目标字母大的最小字母。
