--- a/面试学习题目/前端面试算法题.md
+++ b/面试学习题目/前端面试算法题.md
@@ -1398,3 +1398,460 @@ let flatten = (obj) => {
 
 # 手写Promise
 
+```html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>自定义Promise</title>
+</head>
+<body>
+
+<script type="text/javascript">
+  
+// 自定义 Promise
+(function (window) {
+
+  // Promise 构造函数
+  // excutor: 内部同步执行的函数 (resolve, reject) => {}
+  function Promise(excutor) {
+    const self = this;
+    self.status = "pending";  // 状态值, 初始状态为 pending, 成功了变为resolved, 失败了变为 rejected
+    self.data = undefined;  // 用来保存成功 value 或失败 reason 的属性
+    self.callbacks = [];  // 用来保存所有待调用的包含 onResolved 和 onRejected 回调函数的对象的数组
+
+    // 异步处理成功后应该调用的函数
+    // value: 将交给 onResolve()的成功数据
+    function resolve(value) {
+      if (self.status !== "pending") {
+        return;
+      }
+      //立即更新状态, 保存数据
+      self.status = "resolved";
+      self.data ="自定义" + value;
+      // 异步调用所有待处理的 onResolved 成功回调函数
+      if (self.callbacks.length > 0) {
+        setTimeout(() => {
+          self.callbacks.forEach(fn => {
+            fn.onResolved(value);
+          });
+        });
+      }
+    }
+
+    // 异步处理失败后应该调用的函数
+    // reason: 将交给 onRejected()的失败数据
+    function reject(reason) {
+      if (self.status !== "pending") {
+        return;
+      }
+      //立即更新状态, 保存数据
+      self.status = "rejected";
+      self.data = "自定义" +  reason;
+      // 异步调用所有待处理的 onRejected 回调函数
+      if (self.callbacks.length > 0) {
+        setTimeout(() => {
+          self.callbacks.forEach(fn => {
+            fn.onRejected(reason);
+          });
+        });
+      }
+    }
+
+    try {
+      // 立即同步调用 excutor()处理
+      excutor(resolve, reject);
+    } catch (error) {
+      // 如果出了异常, 直接失败
+      reject(error);
+    }
+  }
+
+  // 为 promise 指定成功/失败的回调函数
+  // 函数的返回值是一个新的 promise 对象
+  Promise.prototype.then = function (onResolved, onRejected) {
+    const self = this;
+
+    // 如果 onResolved/onRejected 不是函数, 可它指定一个默认的函数
+    // 指定返回的 promise 为一个成功状态, 结果值为 value
+    onResolved = typeof onResolved === "function" ? onResolved : value => value;
+    // 指定返回的 promise 为一个失败状态, 结果值为 reason
+    onRejected = typeof onRejected === "function" ? onRejected : reason => { throw reason; };
+
+    // 返回一个新的 promise 对象
+    return new Promise((resolve, reject) => {
+      //专门抽取的用来处理 promise 成功/失败结果的函数
+      // callback: 成功/失败的回调函数
+      function handle(callback) {
+        // 1. 抛出异常 ===> 返回的 promise 变为 rejected
+        try {
+          const x = callback(self.data);
+          // 2. 返回一个新的 promise ===> 得到新的 promise 的结果值作为返回的promise 的结果值
+          if (x instanceof Promise) {
+            // 一旦 x 成功了, resolve(value), 一旦 x失败了: reject(reason)
+            x.then(resolve, reject);
+          } else {
+            // 3. 返回一个一般值(undefined) ===> 将这个值作为返回的 promise 的成功值
+            resolve(x);
+          }
+        } catch (error) {
+          reject(error);
+        }
+      }
+      if (self.status === "resolved") {
+        // 当前 promise 已经成功了
+        setTimeout(() => {
+          handle(onResolved);
+        });
+      } else if (self.status === "rejected") {
+        // 当前 promise 已经失败了
+        setTimeout(() => {
+          handle(onRejected);
+        });
+      } else {
+        // 当前 promise 还未确定 pending
+        // 将 onResolved 和 onRejected 保存起来
+        self.callbacks.push({
+          onResolved(value) {
+            handle(onResolved);
+          },
+          onRejected(reason) {
+            handle(onRejected);
+          }
+        });
+      }
+    });
+  }
+
+  // 为 promise 指定失败的回调函数
+  // 是 then(null, onRejected)的语法糖
+  Promise.prototype.catch = function (onRejected) {
+    return this.then(null, onRejected);
+  }
+
+  // 返回一个指定了成功 value 的 promise 对象
+  //value: 一般数据或 promise
+  Promise.resolve = function (value) {
+    return new Promise((resolve, reject) => {
+      if (value instanceof Promise) {
+        value.then(resolve, reject);
+      } else {
+        resolve(value);
+      }
+    });
+  }
+
+  // 返回一个指定了失败 reason 的 promise 对象
+  // reason: 一般数据/error
+  Promise.reject = function (reason) {
+    return new Promise((resolve, reject) => {
+      reject(reason);
+    });
+  }
+
+  // 返回一个 promise, 只有 promises 中所有 promise 都成功时, 才最终成功, 只要有一个失败就直接失败
+  Promise.all = function (promises) {
+    // 返回一个新的 promise
+    return new Promise((resolve, reject) => {
+      // 已成功的数量
+      let resolvedCount = 0;
+      // 待处理的 promises 数组的长度
+      const promisesLength = promises.length;
+      // 准备一个保存成功值的数组
+      const values = new Array(promisesLength);
+      // 遍历每个待处理的 promise
+      for (let i = 0; i < promisesLength; i++){
+        // promises 中元素可能不是一个数组, 需要用 resolve 包装一下
+        Promise.resolve(promises[i]).then(
+          value => {
+            // 成功当前 promise 成功的值到对应的下标
+            values[i] = value;
+            // 成功的数量加 1
+            resolvedCount++;
+            // 一旦全部成功
+            if (resolvedCount === promisesLength) {
+              // 将所有成功值的数组作为返回 promise 对象的成功结果值
+              resolve(values);
+            }
+          },
+          reason => {
+            // 一旦有一个promise 产生了失败结果值, 将其作为返回promise 对象的失败结果值
+            reject(reason);
+          }
+        );
+      }
+    });
+  }
+
+  // 返回一个 promise， 一旦某个 promise 解决或拒绝， 返回的 promise 就会解决或拒绝。
+  Promise.race = function (promises) {
+    // 返回新的 promise 对象
+    return new Promise((resolve, reject) => {
+      //遍历所有 promise
+      for (let i = 0; i < promises.length; i++){
+        Promise.resolve(promises[i]).then(
+          value => {
+            //只要有一个成功了, 返回的 promise 就成功了
+            resolve(value);
+          },
+          reason => {
+            //只要有一个失败了, 返回的结果就失败了
+            reject(reason);
+          }
+        );
+      }
+    });
+  }
+
+  //返回一个延迟指定时间才确定结果的 promise 对象
+  Promise.resolveDelay = function (value, time) {
+    return new Promise((resolve, reject) => {
+      setTimeout(() => {
+        if (value instanceof Promise) {
+          //如果 value 是一个 promise, 取这个promise 的结果值作为返回的 promise 的结果值
+          //如果 value 成功, 调用resolve(val), 如果 value 失败了, 调用 reject(reason)
+          value.then(resolve, reject);
+        } else {
+          resolve(value);
+        }
+      }, time);
+    });
+  }
+
+  //返回一个延迟指定时间才失败的 Promise 对象。
+  Promise.rejectDelay = function (reason, time){
+    return new Promise((resolve, reject) => {
+      setTimeout(() => {
+        reject(reason);
+      }, time);
+    });
+  }
+
+  // 暴露构造函数
+  window.Promise = Promise;
+
+})(window);
+
+const p = new Promise((resolve, reject) => {
+  setTimeout(() => {
+    if (Date.now() % 2 === 0) {
+      resolve(66)
+    } else {
+      reject(99)
+    }
+  }, 100);
+});
+p.then((value) => {
+    // 成功的回调函数onResolved,得到成的value
+    console.log("成功的value: " + value);
+  }, (reason) => {
+    // 失败的回调函数onRejected,得到失败的reason
+    console.log("失败的reason: " + reason);
+});
+
+</script>
+</body>
+</html>
+```
+
+---
+
+# js手写发布订阅模式
+
+发布-订阅模式其实是一种对象间**一对多的依赖关系**，当一个对象的状态发送改变时，所有依赖于它的对象都将得到状态改变的通知。
+订阅者（Subscriber）把自己想订阅的事件注册（Subscribe）到调度中心（Event Channel），当发布者（Publisher）发布该事件（Publish Event）到调度中心，也就是该事件触发时，由调度中心统一调度（Fire Event）订阅者注册到调度中心的处理代码。
+
+**思路**：
+
+- 需要有一个`list`对象缓存订阅事件
+- 订阅（`on`）如果存在事件就往list里面缓存事件
+- 取消订阅（`off`）从list对象找到订阅事件删除
+- 发布（`emit`）从list对象找到事件去执行就OK
+- 只发布一次（`once`）执行完删除即可
+
+```js
+/*
+(1) 创建一个 EventEmitter 类在该类上创建一个事件中心（Map）
+
+(2) on 方法用来把函数 fn 都加到事件中心中（订阅者注册事件到调度中心）
+
+(3)emit 方法取到 arguments 里第一个当做 event，根据 event 去执行对应事件中心中的函数（发布者发布事件到调度中心，调度中心处理代码）
+
+(4) off 方法可以根据 event 值取消订阅（取消订阅）
+
+(5) once 方法只监听一次，调用完毕后删除缓存函数（订阅一次）
+
+(6) 注册一个 newListener 用于监听新的事件订阅
+*/
+
+class EventEmitter {
+  // 创建一个类，并初始化一个事件存储中心
+  constructor(){
+    // 单例模式
+    if (!EventEmitter.instance) {
+      EventEmitter.instance = this;
+      this._events = {};  // 事件缓存列表
+    }
+    return EventEmitter.instance;
+  }
+
+  // 实现事件的订阅方法 on, 需要接收订阅事件名和对应的回调函数
+  // 基本思路：将事件回调函数存储到对应的事件上
+  on(eventName, callback) {
+    // 由于一个事件可能注册多个回调函数，所以使用数组来存储事件队列
+    if (this._events[eventName]) {
+      // 如果存在该事件名
+      this._events[eventName].push(callback);
+    } else {
+      this._events[eventName] = [callback];
+    }
+  }
+
+  // 实现事件的发布方法 emit，需要接收发布事件名和对应的参数
+  // 基本思路： 获取到事件对应的回调函数依次执行
+  emit(eventName, ...args) {
+    // args 用于收集发布事件时传递的参数
+    if (this._events[eventName]) {
+      //创建副本，如果回调函数内部继续注册相同的事件，会造成死循环
+      let handlers = [...this._events[eventName]];
+      handlers.forEach(callback => callback(...args));
+    }
+  }
+
+  // 实现事件的取消订阅方法 off
+  // 基本思路：找到事件对应的回调函数，删除对应的回调函数
+  off(eventName, callback) {
+    let callbacks = this._events[eventName];
+    let newCallbacks = callbacks.filter(fn => fn != callback && fn.initialCallback != callback);
+    // fn.initialCallback != callback /* 用于once的取消订阅 */
+    this._events[eventName] = newCallbacks;
+    /*
+    let index = callback.indexOf(callback);
+    if (index !== -1) {
+      callbacks.splice(index, 1);
+    }
+    */
+  }
+
+  //实现事件的单次订阅方法 once，需要添加的订阅事件名及指定的回调函数
+  once(eventName, callback) {
+    //由于需要在回调函数执行后，取消订阅当前事件，所以需要对传入的回调函数做一层包装,然后绑定包装后的函数
+    let wrapper = (...args) => {
+      // 执行回调函数
+      callback(...args);
+      // 取消订阅当前事件
+      this.off(eventName, wrapper);
+    }
+    // 由于：我们订阅事件的时候，修改了原回调函数的引用，所以，用户触发 off 的时候不能找到对应的回调函数
+    // 所以，我们需要在当前函数与用户传入的回调函数做一个绑定，我们通过自定义属性来实现
+    wrapper.initialCallback = callback;
+    this.on(eventName, wrapper);
+  }
+
+}
+
+// 测试
+let eventBus = new EventEmitter();
+
+let fn1 = function(name, age) {
+  console.log(`${name} ${age}`);
+}
+
+let fn2 = function(name, age) {
+  console.log(`hello, ${name} ${age}`);
+}
+
+eventBus.on('aaa', fn1);
+eventBus.on('aaa', fn2);
+eventBus.emit('aaa', 'kop', 66);
+eventBus.once("bbb", fn2);
+eventBus.emit("bbb", "John", 26);
+eventBus.emit("bbb", "Bob", 21);
+eventBus.off("aaa",fn1);
+eventBus.emit("aaa", "Alison", 29);
+
+// kop 66
+// hello, kop 66
+// hello, John 26
+// hello, Alison 29
+
+```
+
+简单
+
+```js
+// 发布订阅模式
+class EventEmitter {
+    constructor() {
+        // 事件对象，存放订阅的名字和事件
+        this.events = {};
+    }
+    // 订阅事件的方法
+    on(eventName,callback) {
+       if (!this.events[eventName]) {
+           // 注意时数据，一个名字可以订阅多个事件函数
+           this.events[eventName] = [callback]
+       } else  {
+          // 存在则push到指定数组的尾部保存
+           this.events[eventName].push(callback)
+       }
+    }
+    // 触发事件的方法
+    emit(eventName) {
+        // 遍历执行所有订阅的事件
+       this.events[eventName] && this.events[eventName].forEach(cb => cb());
+    }
+    // 移除订阅事件
+    removeListener(eventName, callback) {
+        if (this.events[eventName]) {
+            this.events[eventName] = this.events[eventName].filter(cb => cb != callback)
+        }
+    }
+    // 只执行一次订阅的事件，然后移除
+    once(eventName,callback) {
+        // 绑定的时fn, 执行的时候会触发fn函数
+        let fn = () => {
+           callback(); // fn函数中调用原有的callback
+           this.removeListener(eventName,fn); // 删除fn, 再次执行的时候之后执行一次
+        }
+        this.on(eventName,fn)
+    }
+}
+let em = new EventEmitter();
+let workday = 0;
+em.on("work", function() {
+    workday++;
+    console.log("work everyday");
+});
+
+em.once("love", function() {
+    console.log("just love you");
+});
+
+function makeMoney() {
+    console.log("make one million money");
+}
+em.on("money",makeMoney)；
+
+let time = setInterval(() => {
+    em.emit("work");
+    em.removeListener("money",makeMoney);
+    em.emit("money");
+    em.emit("love");
+    if (workday === 5) {
+        console.log("have a rest")
+        clearInterval(time);
+    }
+}, 1);
+/*
+work everyday
+just love you
+work everyday
+work everyday
+work everyday
+work everyday
+have a rest
+*/
+```
+
