--- a/面试学习题目/企业前端面试题目.md
+++ b/面试学习题目/企业前端面试题目.md
@@ -1,6 +1,6 @@
 -----
 
-字节暑期实习前端一面   4.26
+## 字节暑期实习前端一面   4.26
 
 1.自我介绍
 
@@ -707,7 +707,7 @@ var repeatFunc=repeat(console.log,4,3000);
 
 ----
 
-美团暑期实习一面  5.10
+## 美团暑期实习一面  5.10
 
 http的方法  option的作用
 
@@ -757,11 +757,56 @@ class 静态方法
 
 ---
 
-pdd面试  06.02
+## pdd面试  06.02
 
 项目介绍，难点
 
 实现轮播图
 
 Vue数据双向绑定原理
+
+
+
+
+
+---
+
+## Momenta前端一面  6.07
+
+js数据类型
+
+判断数据类型的方式
+
+深浅拷贝
+
+promise题目
+
+```js
+new Promise((resolve, reject) => {
+  console.log(0);
+  setTimeout(()=>{
+    console.log("setTimeout");
+    resolve(1);
+    resolve(2);
+    reject(3);
+  });
+}).then((data) => {
+    console.log("result1", data);
+  }, (data) => {
+    console.log("result2", data);
+}).then((data) => {
+  console.log("result3", data);
+}).catch((data) => {
+  console.log(data);
+});
+
+/*
+0
+setTimeout
+result1 1
+result3 undefined
+*/
+```
+
+css三列布局
 
