--- a/css/前端常用布局方案.md
+++ b/css/前端常用布局方案.md
@@ -857,3 +857,1111 @@ Grid方案的实现方式相对来说比较简单，方式也较多。
 
 ## 两列布局
 
+所谓的两列布局就是一列定宽(也有可能由子元素决定宽度)，一列自适应的布局。
+
+这里用到的HTML结构如下：
+
+```html
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		.base {
+			height: 400px;
+			font-size: 80px;
+			text-align: center;
+			line-height: 400px;
+		}
+		/* 清除浮动 */
+		.clearfix:after {
+			content: "";
+			display: block;
+			height: 0;
+			clear: both;
+			visibility: hidden;
+		}
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+		}
+		.right {
+			background-color: gray;
+		}
+	</style>
+
+<body>
+	<div class="container clearfix">
+		<div class="left base">定宽</div>
+		<div class="right base">自适应宽度</div>
+	</div>
+</body>
+```
+
+### 1. float+calc()函数完成左列定宽右列自适应
+
+步骤如下：
+
+1. 左边列开启浮动
+2. 右边列开启浮动
+3. 右边列宽度为父级 100%减去左列的宽度
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+			/* 左边列开启浮动 */
+			float: left;
+		}
+		.right {
+			background-color: gray;
+
+			/* 右边列开启浮动 */
+			float: left;
+			/* 宽度减去左列的宽度 */
+			width: calc(100% - 200px);
+		}
+```
+
+### 2. float+margin-left完成左列定宽右列自适应
+
+步骤如下：
+
+1. 左边列开启浮动
+2. 通过外边距的方式使该容器的左边有左边列容器的宽度的外边距
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+			/* 左边列开启浮动 */
+			float: left;
+		}
+		.right {
+			background-color: gray;
+
+			/* 通过外边距的方式使该容器的左边有200px */
+			margin-left: 200px;
+		}
+```
+
+### 3. absolute+margin-left完成左列定宽右列自适应
+
+步骤如下：
+
+1. 开启定位脱离文档流
+2. 通过外边距的方式使该容器的左边有左边列容器的宽度的外边距
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+             position: relative;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+			/* 开启定位脱离文档流 */
+			position: absolute;
+             left: 0;
+             top: 0;
+		}
+		.right {
+			background-color: gray;
+
+			/* 通过外边距的方式使该容器的左边有200px */
+			margin-left: 200px;
+		}
+```
+
+### 4. float+overflow完成左列定宽右列自适应
+
+步骤如下：
+
+1. 左侧元素开始浮动
+2. 右侧自适应元素设置`overflow`会创建一个BFC完成自适应
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+			/* 左侧元素开始浮动 */
+			float: left;
+		}
+		.right {
+			background-color: gray;
+
+			/* 右侧自适应元素设置 overflow 会创建一个BFC 完成自适应 */
+			overflow: hidden;
+		}
+```
+
+### 5. Flex方案
+
+通过Flex布局实现该功能主要是通过 `flex` 属性来实现示例代码如下：
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+
+			display: flex;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+		}
+		.right {
+			background-color: gray;
+
+			flex: 1;  /*等同于 flex-grow : 1; flex-shrink: 1; flex-basis: 0% ; */
+		}
+```
+
+### 6. Grid方案
+
+通过 Grid 布局实现该功能主要是通过`template`属性实现，具体代码如下所示：
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+
+			display: grid;
+			/* 将其划分为两列，其中一列有本身宽度决定， 一列占剩余宽度*/
+			grid-template-columns: auto 1fr;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+		}
+		.right {
+			background-color: gray;
+
+		}
+```
+
+---
+
+## 三列布局
+
+三列布局主要分为两种：
+
+- 第一种是前两列定宽，最后一列自适应，这一种本质上与两列布局没有什么区别，可以参照两列布局实现。
+- 第二种是前后两列定宽，中间自适应，最终效果图如下
+
+```html
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		.base {
+			height: 400px;
+			font-size: 80px;
+			text-align: center;
+			line-height: 400px;
+		}
+		/* 清除浮动 */
+		.clearfix:after {
+			content: "";
+			display: block;
+			height: 0;
+			clear: both;
+			visibility: hidden;
+		}
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+		}
+		.middle{
+			background-color: gray;
+		}
+		.right {
+			width: 300px;
+			background-color: #0f2321;
+		}
+	</style>
+
+<body>
+	<div class="container clearfix">
+		<div class="left base">左定宽</div>
+		<div class="middle base">中间自适应宽度</div>
+		<div class="right base">右定宽</div>
+	</div>
+</body>
+```
+
+### 1. 通过float实现(一)
+
+实现步骤：
+
+为了完成效果需要调整HTML结构，调整后如下：
+
+```html
+	<div class="container clearfix">
+		<div class="left base">左定宽</div>
+		<div class="right base">右定宽</div>
+		<div class="middle base">中间自适应宽度</div>
+	</div>
+```
+
+1. 左列容器开启左浮动
+2. 右列容器开启右浮动
+3. 自适应元素设置`overflow`会创建一个BFC完成自适应
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+			/*左列容器开启左浮动 */
+			float: left;
+		}
+		.middle{
+			background-color: gray;
+
+			/* 自适应元素设置 overflow 会创建一个BFC 完成自适应 */
+			overflow: hidden;
+		}
+		.right {
+			width: 300px;
+			background-color: #0f2321;
+
+			/* 右列容器开启右浮动 */
+			float: right;
+		}
+```
+
+### 2. 通过float实现(二)
+
+实现步骤
+
+1. 左列容器开启左浮动
+2. 右列容器开启右浮动
+3. 使中间自适应的宽度为父级容器减去两个定宽的列
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+			/*左列容器开启左浮动 */
+			float: left;
+		}
+		.right {
+			width: 300px;
+			background-color: #0f2321;
+
+			/* 右列容器开启右浮动 */
+			float: right;
+		}
+		.middle{
+			background-color: gray;
+			
+			/* 使中间自适应的宽度为父级容器减去两个定宽的列 */
+			display: inline-block;
+			width: calc(100% - 500px);
+		}
+```
+
+### 3. 通过position实现
+
+实现步骤
+
+1. 左右两列脱离文档流，并通过偏移的方式到达自己的区域
+2. 使中间自适应的宽度为父级容器减去两个定宽的列
+3. 通过外边距将容器往内缩小
+
+```js
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+
+			position: relative;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+			/* 左右两列脱离文档流，并通过偏移的方式到达自己的区域 */
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.right {
+			width: 300px;
+			background-color: #0f2321;
+
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
+		.middle{
+			background-color: gray;
+
+			/* 使中间自适应的宽度为父级容器减去两个定宽的列 */
+			display: inline-block;
+			width: calc(100% - 500px);
+			/* 通过外边距将容器往内缩小 */
+			margin-left: 200px;
+			margin-right: 300px;
+		}
+```
+
+### 4. Flex方案
+
+通过 Flex 布局实现该功能主要是通过 `flex` 属性来实现。
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+
+			display: flex;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+		}
+		.right {
+			width: 300px;
+			background-color: #0f2321;
+
+		}
+		.middle{
+			background-color: gray;
+
+			flex: 1;  /* 表示 flex-grow: 1; flex-shrink: 1; flex-basis: 0%; 即该项占所有剩余空间*/
+		}
+```
+
+### 5. Grid方案
+
+通过 Grid 布局实现该功能主要是通过 `template` 属性实现。
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+
+			display: grid;
+			/* 将其划分为三列，其中一列有本身宽度决定， 一列占剩余宽度 */
+			grid-template-columns: auto 1fr auto;
+		}
+		.left {
+			width: 200px;
+			background-color: #336799;
+
+		}
+		.right {
+			width: 300px;
+			background-color: #0f2321;
+
+		}
+		.middle{
+			background-color: gray;
+		}
+```
+
+---
+
+## 等分布局
+
+等分布局就是将一个容器平均分成几等份，这里以 4 等分为例，主要介绍4种方法。
+
+```html
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		.item {
+			height: 400px;
+			font-size: 40px;
+			text-align: center;
+			line-height: 400px;
+		}
+		/* 清除浮动 */
+		.clearfix:after {
+			content: "";
+			display: block;
+			height: 0;
+			clear: both;
+			visibility: hidden;
+		}
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+		}
+		.item1 {
+			background-color: #123456;
+		}
+		.item2 {
+			background-color: #789456;
+		}
+		.item3 {
+			background-color: #123123;
+		}
+		.item4 {
+			background-color: #321456;
+		}
+	</style>
+
+<body>
+	<div class="container clearfix">
+		<div class="item item1"></div>
+		<div class="item item2"></div>
+		<div class="item item3"></div>
+		<div class="item item4"></div>
+	</div>
+</body>
+```
+
+### 1. 浮动+百分比方式
+
+这种方式比较简单，开启浮动，使每个元素占`25%`的宽度。
+
+```css
+		.item {
+			height: 400px;
+			font-size: 40px;
+			text-align: center;
+			line-height: 400px;
+
+			/* 开启浮动，每个元素占 25% 的宽度 */
+			float: left;
+			width: 25%;
+		}
+```
+
+### 2. 行内块级+百分比方式
+
+这种方式与上面那种方式类似，不过需要注意的是行内块级元素有一些类似于边距的几个像素，导致各`25%`会超出容器。
+
+```css
+		.item {
+			height: 400px;
+			font-size: 40px;
+			text-align: center;
+			line-height: 400px;
+
+			/* 设置每个元素为行内块级元素，每个元素占 24.5% 的宽度 */
+			display: inline-block;
+			width: 24.5%;
+		}
+```
+
+### 3. Flex方案
+
+通过 Flex 布局实现该功能主要是通过`flex`属性来实现。
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+
+			/* 开启 flex 布局 */
+			display: flex;
+		}
+		.item {
+			height: 400px;
+			font-size: 40px;
+			text-align: center;
+			line-height: 400px;
+
+			/* 每个元素占相同的宽度 */
+			flex: 1;
+		}
+```
+
+### 4. Grid方案
+
+通过 Grid 布局实现该功能主要是通过`template`属性实现。
+
+```css
+		.container {
+			height: 400px;
+			background-color: #ffffee;
+
+			/* 开启 grid 布局 */
+			display: grid;
+			 grid-template-columns: repeat(4, 1fr);
+			/* 使用 repeat 函数生成如下代码 */
+			/* grid-template-columns: 1fr 1fr 1fr 1fr; */
+		}
+```
+
+----
+
+## Sticky Footer布局
+
+所谓的*Sticky Footer* 布局并不是一种新的前端技术和概念，它就是一种网页布局。如果页面内容不够长时，底部栏就会固定到浏览器的底部；如果足够长时，底部栏就后跟随在内容的后面。
+
+这里来介绍实现该布局的4种方式
+
+```html
+	<style type="text/css">
+		.header{
+			background-color: #987dff;
+		}
+		.container {
+			height: 400px;
+			display: flex;
+		}
+
+		.left {
+			width: 200px;
+			background-color: #123456;
+		}
+		.middle {
+			flex: 1;
+			background-color: #789456;
+		}
+		.right {
+			width: 300px;
+			background-color: #123123;
+		}
+		.footer {
+			background-color: #321456;
+		}
+			.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+		.left, .middle, .right {
+			height: 400px;
+			line-height: 400px;
+			text-align: center;
+			font-size: 40px;
+		}
+	</style>
+
+<body>
+	<main class="main">
+		<header class="header">header</header>
+		<article class="container">
+			<section class="left">left</section>
+			<section class="middle">middle</section>
+			<section class="right">right</section>
+		</article>
+		<footer class="footer">footer</footer>
+	</main>
+</body>
+```
+
+### 1. 绝对定位的方式
+
+通过绝对定位的方式实现Sticky Footer布局的步骤如下：
+
+1. 设置最外层容器高度为100%；
+2. 让子元素元素相对于容器元素进行定位，并设置容器元素最小高度为100%；
+3. 在中间区域设置`padding-bottom`为`footer`的高度 ；
+4. 底部栏绝对定位，并一直吸附在底部即可实现。
+
+```css
+		/* 设置最外层容器为100% */
+		html, body {
+			height: 100%;
+		}
+		.main{
+			/* 让子元素元素相对于容器元素进行定位，并设置容器元素最小高度为100% */
+			position: relative;
+			min-height: 100%;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.container {
+			height: 400px;
+			display: flex;
+
+			/* 在中间区域设置 padding-bottom 为footer 的高度 */
+			padding-bottom: 100px;
+		}
+		.left {
+			width: 200px;
+			background-color: #123456;
+		}
+		.middle {
+			flex: 1;
+			background-color: #789456;
+		}
+		.right {
+			width: 300px;
+			background-color: #123123;
+		}
+		.footer {
+			background-color: #321456;
+
+			/* 由于开启了绝对定位，宽度成了自适应，设置为100% bottom:0 始终保持底部 */
+			position: absolute;
+			width: 100%;
+			bottom: 0;
+		}
+			.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+		.left, .middle, .right {
+			height: 400px;
+			line-height: 400px;
+			text-align: center;
+			font-size: 40px;
+		}
+```
+
+### 2. 使用calc函数实现
+
+使用`calc`函数实现的方式会比较简单，中间的容器最少高度为`视口宽度的100% - 头部和底部两部分的高度`即可完成该功能。
+
+```css
+		.header{
+			background-color: #987dff;
+		}
+		.container {
+			display: flex;
+
+			/* 这里的 中间 部分的容器最少为视口宽度的 100% - 头部和底部两部分的高度即可完成该功能 */
+			min-height: calc(100vh - 200px);
+		}
+		.left {
+			width: 200px;
+			background-color: #123456;
+		}
+		.middle {
+			flex: 1;
+			background-color: #789456;
+		}
+		.right {
+			width: 300px;
+			background-color: #123123;
+		}
+		.footer {
+			background-color: #321456;
+		}
+			.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+		.left, .middle, .right {
+			height: 400px;
+			line-height: 400px;
+			text-align: center;
+			font-size: 40px;
+		}
+```
+
+### 3. Flex方案
+
+实现步骤如下
+
+1. 开启flex布局
+2. 将子元素布局方向修改为垂直排列
+3. 设置最小高度为当前视口，使不管中间部分有多高，始终都可以保持在底部
+4. 设置中间部分容器高度为自适应
+
+```css
+		.main {
+			/* 开启flex布局 */
+			display: flex;
+			/* 将子元素布局方向修改为垂直排列 */
+			flex-flow: column;
+			/* 设置最小高度为当前视口，使不管中间部分有多高，始终都可以保持在底部 */
+			min-height: 100vh;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.container {
+			display: flex;
+
+			/*设置 中间 部分自适应*/
+			flex: 1;
+		}
+		.left {
+			width: 200px;
+			background-color: #123456;
+		}
+		.middle {
+			flex: 1;
+			background-color: #789456;
+		}
+		.right {
+			width: 300px;
+			background-color: #123123;
+		}
+		.footer {
+			background-color: #321456;
+		}
+			.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+		.left, .middle, .right {
+			height: 400px;
+			line-height: 400px;
+			text-align: center;
+			font-size: 40px;
+		}
+```
+
+### 4. Grid方案
+
+实现步骤如下
+
+1. 开启grid布局
+2. 置最小高度为当前视口，使不管中间部分有多高，始终都可以保持在底部
+
+```css
+		.main {
+			/* 开启 grid 布局 */
+			display: grid;
+			grid-template-rows: auto 1fr auto;
+			/* 设置最小高度为当前视口，使不管中间部分有多高，始终都可以保持在底部 */
+			min-height: 100vh;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.container {
+			display: flex;
+		}
+		.left {
+			width: 200px;
+			background-color: #123456;
+		}
+		.middle {
+			flex: 1;
+			background-color: #789456;
+		}
+		.right {
+			width: 300px;
+			background-color: #123123;
+		}
+		.footer {
+			background-color: #321456;
+		}
+			.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+		.left, .middle, .right {
+			height: 400px;
+			line-height: 400px;
+			text-align: center;
+			font-size: 40px;
+		}
+```
+
+## 全屏布局
+
+全部布局主要应用在后台，主要效果如下所示：
+
+```html
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		body, html, .container {
+			height: 100vh;
+			box-sizing: border-box;
+			text-align: center;
+			overflow: hidden;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.content {
+			/* 中间部分的布局可以参考 两列、三列布局  */
+			display: grid;
+			grid-template-columns: auto 1fr;
+			background-color: #feeeee;
+		}
+		.left {
+			width: 240px;
+			background-color: #123456;
+			font-size: 80px;
+			line-height: calc(100vh - 200px);
+		}
+		.right {
+			background-color: #123123;
+			font-size: 60px;
+		}
+		.footer {
+			background-color: #321456;
+		}
+		.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+	</style>
+
+<body>
+	<div class="container">
+		<div class="header">header</div>
+		<div class="content">
+			<div class="left">导航</div>
+			<div class="right">
+				<div class="right-in">自适应，超出高度出现滚动条</div>
+			</div>
+		</div>
+		<div class="footer">footer</div>
+	</div>
+</body>
+```
+
+### 1. 使用calc函数实现
+
+实现步骤如下：
+
+1. 通过`calc`函数计算出中间容器的高度。
+2. 中间出现滚动条的容器设置`overflow: auto`即出现滚动条的时候出现滚动条。
+
+```html
+<style>		
+		body {
+			margin: 0;
+		}
+		body, html, .container {
+			height: 100vh;
+			box-sizing: border-box;
+			text-align: center;
+			overflow: hidden;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.content {
+			/* 中间部分的布局可以参考 两列、三列布局  */
+			display: grid;
+			grid-template-columns: auto 1fr;
+			background-color: #feeeee;
+
+			overflow: hidden;
+			/* 通过 calc 计算容器的高度 */
+			height: calc(100vh - 200px);
+		}
+		.left {
+			width: 240px;
+			background-color: #123456;
+			font-size: 80px;
+			line-height: calc(100vh - 200px);
+		}
+		.right {
+			background-color: #123123;
+			font-size: 60px;
+
+			/* 如果超出出现滚动条 */
+			overflow: auto;
+			height: 100%;
+		}
+		.right-in {
+			/* 假设容器内有500px的元素 */
+			height: 500px;
+		}
+		.footer {
+			background-color: #321456;
+		}
+		.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+	</style>
+
+<body>
+	<div class="container">
+		<div class="header">header</div>
+		<div class="content">
+			<div class="left">导航</div>
+			<div class="right">
+				<div class="right-in">
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+					自适应，超出高度出现滚动条<br>
+				</div>
+			</div>
+		</div>
+		<div class="footer">footer</div>
+	</div>
+</body>
+```
+
+### 2. Flex 方案
+
+使用Flex方式实现该布局比较简单。
+
+```html
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		body, html, .container {
+			height: 100vh;
+			box-sizing: border-box;
+			text-align: center;
+			overflow: hidden;
+		}
+		.container {
+			/* 开启flex布局 */
+			display: flex;
+			/* 将子元素布局方向修改为垂直排列 */
+			flex-flow: column;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.content {
+			/* 中间部分的布局可以参考 两列、三列布局  */
+			display: grid;
+			grid-template-columns: auto 1fr;
+			background-color: #feeeee;
+			
+			/* 设置 中间 部分自适应 */
+			flex: 1;
+		}
+		.left {
+			width: 240px;
+			background-color: #123456;
+			font-size: 80px;
+			line-height: calc(100vh - 200px);
+		}
+		.right {
+			background-color: #123123;
+			font-size: 60px;
+
+			/* 如果超出出现滚动条 */
+			overflow: auto;
+			height: 100%;
+		}
+		.right-in {
+			/* 假设容器内有500px的元素 */
+			height: 500px;
+		}
+		.footer {
+			background-color: #321456;
+		}
+		.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+	</style>
+```
+
+### 3. Grid 方案
+
+grid布局对于这种布局来说，实现起来是非常得心应手的，通过`template`属性即可实现。
+
+```html
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		body, html, .container {
+			height: 100vh;
+			box-sizing: border-box;
+			text-align: center;
+			overflow: hidden;
+		}
+		.container {
+			/* 开启 grid 布局 */
+			display: grid;
+			grid-template-rows: auto 1fr auto;
+		}
+		.header{
+			background-color: #987dff;
+		}
+		.content {
+			/* 中间部分的布局可以参考 两列、三列布局  */
+			display: grid;
+			grid-template-columns: auto 1fr;
+			background-color: #feeeee;
+		}
+		.left {
+			width: 240px;
+			background-color: #123456;
+			font-size: 80px;
+			line-height: calc(100vh - 200px);
+		}
+		.right {
+			background-color: #123123;
+			font-size: 60px;
+
+			/* 如果超出出现滚动条 */
+			overflow: auto;
+			height: 100%;
+		}
+		.right-in {
+			/* 假设容器内有500px的元素 */
+			height: 500px;
+		}
+		.footer {
+			background-color: #321456;
+		}
+		.header, .footer {
+			height: 100px;
+			line-height: 100px;
+			text-align: center;
+			font-size: 40px;
+		}
+	</style>
+```
+
