--- a/面试学习题目/企业前端面试题目.md
+++ b/面试学习题目/企业前端面试题目.md
@@ -779,6 +779,42 @@ js数据类型
 
 深浅拷贝
 
+```js
+//判断
+let a = 2;
+let b = a;
+let c = 2;
+
+console.log(a == b);  // true
+console.log(a === b);  // true
+console.log(a == c);  // true
+console.log(a === c);  // true
+
+let arr1 = [1, 2,3];
+let arr2 = arr1;
+let arr3 = [1, 2, 3];
+
+console.log(arr1 == arr2);  // true
+console.log(arr1 === arr2);  // true
+console.log(arr1 == arr3);  // false
+console.log(arr1 === arr3);  // false
+
+let obj1 = {
+    name:"john",
+    age:2
+}
+let obj2 = obj1;
+let obj3 = {
+    name:"john",
+    age:2
+}
+
+console.log(obj1 == obj2);  // true
+console.log(obj1 === obj2);  // true
+console.log(obj1 == obj3);  // false
+console.log(obj1 === obj3);  // false
+```
+
 promise题目
 
 ```js
