--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -14090,6 +14090,84 @@ console.log(result);
 
 
 ---
+## 730. 统计不同回文子序列
+
+给定一个字符串 s，返回 s 中不同的非空「回文子序列」个数 。
+
+通过从 s 中删除 0 个或多个字符来获得子序列。
+
+如果一个字符序列与它反转后的字符序列一致，那么它是「回文字符序列」。
+
+如果有某个 i , 满足 ai != bi ，则两个序列 a1, a2, ... 和 b1, b2, ... 不同。
+
+注意：
+
+结果可能很大，你需要对 109 + 7 取模 。
+
+提示：
+
+1 <= s.length <= 1000
+s[i] 仅包含 'a', 'b', 'c' 或 'd' 
+
+```
+var countPalindromicSubsequences = function(s) {
+    const MOD = 1000000007;
+    const n = s.length;
+    const dp = new Array(n).fill(0).map(() => new Array(n).fill(0));
+    const next = new Array(n).fill(0).map(() => new Array(4).fill(0));
+    const pre = new Array(n).fill(0).map(() => new Array(4).fill(0));
+
+    for (let i = 0; i < n; i++) {
+        dp[i][i] = 1;
+    }
+
+    const pos = new Array(n);
+    pos[0] = pos[1] = pos[2] = pos[3] = -1;
+
+    for (let i = 0; i < n; i++) {
+        for (let c = 0; c < 4; c++) {
+            pre[i][c] = pos[c];
+        }
+        pos[s[i].charCodeAt() - 'a'.charCodeAt()] = i;
+    }
+
+    pos[0] = pos[1] = pos[2] = pos[3] = n;
+
+    for (let i = n - 1; i >= 0; i--) {
+        for (let c = 0; c < 4; c++) {
+            next[i][c] = pos[c];
+        }
+        pos[s[i].charCodeAt() - 'a'.charCodeAt()] = i;
+    }
+
+    for (let len = 2; len <= n; len++) {
+        for (let i = 0; i + len <= n; i++) {
+            let j = i + len - 1;
+            if (s[i] === s[j]) {
+                let low = next[i][s[i].charCodeAt() - 'a'.charCodeAt()];
+                let high = pre[j][s[i].charCodeAt() - 'a'.charCodeAt()];
+                if (low > high) {
+                    dp[i][j] = (2 + dp[i + 1][j - 1] * 2) % MOD;
+                } else if (low === high) {
+                    dp[i][j] = (1 + dp[i + 1][j - 1] * 2) % MOD;
+                } else {
+                    dp[i][j] = (dp[i + 1][j - 1] * 2 % MOD - dp[low + 1][high - 1] + MOD) % MOD;
+                }
+            } else {
+                dp[i][j] = ((dp[i + 1][j] + dp[i][j - 1]) % MOD - dp[i + 1][j - 1] + MOD) % MOD;
+            }
+        }
+    }
+
+    return dp[0][n - 1];
+};
+
+```
+
+
+
+---
+
 ## 732. 我的日程安排表 III
 
 当 k 个日程安排有一些时间上的交叉时（例如 k 个日程安排都在同一时间内），就会产生 k 次预订。
