--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -15574,6 +15574,46 @@ console.log(result);
 
 ---
 
+## 926. 将字符串翻转到单调递增
+
+如果一个二进制字符串，是以一些 0（可能没有 0）后面跟着一些 1（也可能没有 1）的形式组成的，那么该字符串是 单调递增 的。
+
+给你一个二进制字符串 s，你可以将任何 0 翻转为 1 或者将 1 翻转为 0 。
+
+返回使 s 单调递增的最小翻转次数。
+
+**提示：**
+
+- `1 <= s.length <= 105`
+- `s[i]` 为 `'0'` 或 `'1'`
+
+```
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var minFlipsMonoIncr = function(s) {
+    const n = s.length;
+    let dp0 = 0, dp1 = 0;
+    for (let i =0; i < n; i++) {
+        const c = s[i];
+        let dp0New = dp0, dp1New = Math.min(dp0, dp1);
+        if (c === "1") {
+            dp0New++;
+        } else {
+            dp1New++;
+        }
+        dp0 = dp0New;
+        dp1= dp1New;
+    }
+    return Math.min(dp0, dp1);
+};
+```
+
+
+
+----
+
 ## 929. 独特的电子邮件地址
 
 每个 有效电子邮件地址 都由一个 本地名 和一个 域名 组成，以 '@' 符号分隔。除小写字母之外，电子邮件地址还可以含有一个或多个 '.' 或 '+' 。
