--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -16888,6 +16888,66 @@ console.log(result);
 
 超时
 
+----
+
+## 1051. 高度检查器
+
+学校打算为全体学生拍一张年度纪念照。根据要求，学生需要按照 非递减 的高度顺序排成一行。
+
+排序后的高度情况用整数数组 expected 表示，其中 expected[i] 是预计排在这一行中第 i 位的学生的高度（下标从 0 开始）。
+
+给你一个整数数组 heights ，表示 当前学生站位 的高度情况。heights[i] 是这一行中第 i 位学生的高度（下标从 0 开始）。
+
+返回满足 heights[i] != expected[i] 的 下标数量 。
+提示：
+
+1 <= heights.length <= 100
+1 <= heights[i] <= 100
+
+```js
+/**
+ * @param {number[]} heights
+ * @return {number}
+ */
+var heightChecker = function(heights) {
+    let ans = 0;
+    let arr = [...heights];
+    arr.sort((a, b) => a -b);
+    arr.forEach((value, index) => {
+        ans += value === heights[index] ? 0 : 1;
+    });
+    return ans;
+};
+
+let heights = [5,1,2,3,4];
+let result = heightChecker(heights);
+console.log(result);
+```
+
+```
+var heightChecker = function(heights) {
+    const m = parseInt(_.max(heights));
+    const cnt = new Array(m + 1).fill(0);
+    for (const h of heights) {
+        ++cnt[h];
+    }
+
+    let idx = 0, ans = 0;
+    for (let i = 1; i <= m; ++i) {
+        for (let j = 1; j <= cnt[i]; ++j) {
+            if (heights[idx] !== i) {
+                ++ans;
+            }
+            ++idx;
+        }
+    }
+    return ans;
+};
+
+```
+
+
+
 
 ---
 ## 1154.  一年中的第几天
