--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -13979,6 +13979,66 @@ var isOneBitCharacter = function(bits) {
 
 
 ---
+## 719. 找出第 K 小的数对距离
+
+数对 (a,b) 由整数 a 和 b 组成，其数对距离定义为 a 和 b 的绝对差值。
+
+给你一个整数数组 nums 和一个整数 k ，数对由 nums[i] 和 nums[j] 组成且满足 0 <= i < j < nums.length 。返回 所有数对距离中 **第 k 小**的数对距离。
+提示：
+
+n == nums.length
+2 <= n <= 104
+0 <= nums[i] <= 106
+1 <= k <= n * (n - 1) / 2
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var smallestDistancePair = function(nums, k) {
+    nums.sort((a, b) => a - b);
+    let n = nums.length;
+    let left = 0, right = nums[n - 1] - nums[0];
+    while (left <= right) {
+        const mid = Math.floor((left + right) / 2);
+        let cnt = 0;
+        for (let j = 0; j < n; j++) {
+            const i = binarySearch(nums, j, nums[j] - mid);
+            cnt += j - i;
+        }
+        if (cnt >= k) {
+            right = mid - 1;
+        } else {
+            left = mid + 1;
+        }
+    }
+    return left;
+};
+
+const binarySearch = (nums, end, target) => {
+    let left = 0, right = end;
+    while(left < right) {
+        const mid = Math.floor((left + right) / 2);
+        if (nums[mid] < target) {
+            left = mid + 1;
+        } else {
+            right = mid;
+        }
+    }
+    return left;
+}
+
+let nums = [1,3,1], k = 1;
+let result = smallestDistancePair(nums, k);
+console.log(result);
+```
+
+
+
+----
+
 ## 720. 词典中最长的单词
 
 给出一个字符串数组 words 组成的一本英语词典。返回 words 中最长的一个单词，该单词是由 words 词典中其他单词逐步添加一个字母组成。
